terraform/modules/base/submodules/traefik/middlewares/error-pages.tpl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages
  namespace: ${namespace}
spec:
  errors:
    status:
      - "400-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 8080
