terraform/modules/base/submodules/traefik/middlewares/ip-whitelist.tpl.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist
  namespace: ${namespace}
spec:
  ipWhiteList:
    sourceRange: ${jsonencode(source_range)}
