terraform/modules/base/submodules/traefik/middlewares/nextcloud-headers.tpl.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: ${namespace}
spec:
  headers:
    hostsProxyHeaders:
      - "X-Forwarded-Host"
    referrerPolicy: "same-origin"
