terraform/modules/base/submodules/traefik/middlewares/nextcloud-redirect-webfinger.tpl.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect-webfinger
  namespace: ${namespace}
spec:
  redirectRegex:
    permanent: true
    regex: https?://([^/]*)(/.well-known[^#]*)
    replacement: https://$${1}/index.php$${2}
