terraform/modules/base/submodules/traefik/middlewares/nextcloud-redirectregex.tpl.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirectregex
  namespace: ${namespace}
spec:
  redirectRegex:
    permanent: true
    regex: https://(.*)/.well-known/(?:card|cal)dav
    replacement: https://$${1}/remote.php/dav
