terraform/modules/base/submodules/traefik/middlewares/redirect-https.tpl.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: ${namespace}

spec:
  redirectScheme:
    scheme: https
    permanent: true
