terraform/modules/base/submodules/traefik/middlewares/error-default-ingress.tpl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-default-ingress
  namespace: ${namespace}
spec:
  entryPoints:
    - web
    - websecure
    - websecure-ext
  routes:
  - match: HostRegexp(`{any:.+}`)
    kind: Rule
    services:
    - name: error-pages
      port: 8080
